# octo

./: .clang-format  .gitignore  CMakeLists.txt  NetworkManagerWrapper.cpp  NetworkManagerWrapper.hpp  main.cpp  themewidget.cpp  themewidget.h  themewidget.ui
